--- a/book.html
+++ b/book.html
@@ -21,8 +21,10 @@
             <option value="science">Science</option>
         </select>
     </form>
+    
     <section id="books-container">
     </section>
 
+<script src="js/books-script.js"></script>
 </body>
 </html>
